Revert "exprimental with Details trying to fix overflow to the right will come back to it later"
This reverts commit c4cea06abb4e1e6e1e8527b6178758e6ecf4e8bb.

--- a/src/pages/Detail.scss
+++ b/src/pages/Detail.scss
@@ -1,10 +1,10 @@
 .sliderimg{
-
+    width: 100%;
     height: 250px;
     object-fit: cover
   };
 .carousel{
-  position: relative;
+    width: 100%;
 };
 .head{
     display: flex;
@@ -16,7 +16,6 @@
 .button{
     display: flex;
     flex-direction: row-reverse;
-    flex-wrap: wrap;
 }
 .title{
     font: bold 25px
